--- a/src/app/screens/devices/devices.component.css
+++ b/src/app/screens/devices/devices.component.css
@@ -1,4 +1,4 @@
-.content {
+/* .content {
     display: flex;
     gap: 1rem;
     padding: 1rem;
@@ -302,4 +302,581 @@
     .note p{
         font-size: .8rem;
     }
+} */
+
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.menu {
+    display: flex;
+    gap: 1rem;
+    border-radius: 12.114px;
+    background: #FFF;
+    padding: .75rem;
+}
+
+.menu li {
+    border-radius: 45.429px;
+    background: #FFF;
+    box-shadow: 0px 0px 10.095px 0px rgba(0, 0, 0, 0.10);
+    padding: .6rem .7rem;
+    display: flex;
+    align-items: center;
+    gap: .4rem;
+    cursor: pointer;
+    transition: 250ms;
+}
+
+.menu li.active {
+    border-radius: 8.076px;
+    background: linear-gradient(180deg, #1A9096 0%, #2EBC96 100%), #FFF;
+    box-shadow: 0px 4.038px 10.095px 0px rgba(0, 0, 0, 0.15);
+    transition: 250ms;
+}
+
+.menu li .icon {
+    height: 30px;
+    width: 30px;
+    border-radius: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu li .icon img {
+    width: 60%;
+    object-fit: contain;
+}
+
+.menu li.active .icon {
+    background-color: white;
+}
+
+.menu li span {
+    color: #000;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.menu li.active span {
+    color: white;
+}
+
+.header {
+    border-radius: 12px;
+    background: linear-gradient(271deg, #2EBC96 3.48%, #1A9096 142.22%);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
+    padding: 2rem 1.25rem;
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+.h-item {
+    display: flex;
+    align-items: center;
+    gap: .75rem;
+    color: white;
+}
+
+.h-item strong,
+.h-item span {
+    color: #FFF;
+    font-family: poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.h-item span {
+    font-weight: 400;
+}
+
+.banner_img {
+    position: absolute;
+    top: 35%;
+    right: 1rem;
+}
+
+.reports {
+    height: 680px;
+}
+
+.analytics {
+    display: flex;
+    gap: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.card {
+    flex: 1;
+    padding: 1.5rem;
+    border-radius: 23.176px;
+    background: #FFF;
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
+    gap: .8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card .icon {
+    width: 57.94px;
+    height: 57.94px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+}
+
+.card:nth-child(1) .icon {
+    background-color: #FA5A7D;
+}
+
+.card:nth-child(2) .icon {
+    background-color: #FF947A;
+}
+
+.card h1 {
+    color: var(--Greys-Blue-Grey-900, #151D48);
+    font-family: Poppins;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 600;
+}
+
+.card p {
+    color: #425166;
+    font-family: Poppins;
+    font-size: 1.3rem;
+    font-style: normal;
+    max-width: 14ch;
+    font-weight: 500;
+}
+
+.card span {
+    color: var(--Primary-800, #4079ED);
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 23.176px;
+    /* 133.333% */
+}
+
+.card-full {
+    flex: 2;
+    background: url(../../../assets/img/coloured_card.png);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 1rem 1.5rem;
+    border-radius: 1.1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.cf-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.cf-item h2 {
+    color: #FFF;
+    font-family: poppins;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.cf-item h3 {
+    color: #FFF;
+    font-family: poppins;
+    margin-top: .5rem;
+    font-size: 2.2rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.cf-item span {
+    color: #FFF;
+    font-family: poppins;
+    font-size: .9rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.note-banner {
+    background: url(../../../assets/img/block.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    border-radius: .6rem;
+    padding: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.note-banner img {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: -30px;
+    left: 1rem;
+}
+
+.note-banner button {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.note-banner p {
+    max-width: 87ch;
+    color: #FFF;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: 0.36px;
+}
+
+.activity {
+    width: 100%;
+}
+
+.d_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.d_header h4 {
+    color: #161616;
+    font-family: var(--jakarta);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.d_header a {
+    color: #000;
+    font-family: var(--jakarta);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+
+.d_body {
+    margin-top: 1rem;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: .7rem;
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.d_card {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+
+.d_c_info {
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+}
+
+.d_c_info span {
+    color: #000;
+    font-family: var(--jakarta);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.d_card>span {
+    color: #000;
+    font-size: 14px;
+    font-family: var(--jakarta);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.d_card .status {
+    background-color: #787878;
+    height: 11px;
+    width: 11px;
+    border-radius: 11px;
+    flex-shrink: 0;
+}
+
+.d_card .status.active {
+    background-color: #0B7A60;
+}
+
+.mobile {
+    display: none;
+}
+
+.bar-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 8.356px;
+    background: var(--Neutral-White, #FFF);
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
+    padding: 2rem;
+    min-width: 411px;
+}
+
+.bc-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.bc-top h3 {
+    color: #030303;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.bc-top a {
+    display: flex;
+    align-items: center;
+    gap: .2rem;
+    color: var(--Diverging-Blue, #3B82F6);
+    font-family: "Plus Jakarta Sans";
+    font-size: .9rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21.093px;
+    /* 142.857% */
+}
+
+.chart {
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.bc-table {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+}
+
+.bct-item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: #737791;
+    font-family: "Plus Jakarta Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: .9rem;
+}
+
+.bct-item:nth-child(1) {
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #D4D4D4;
+}
+
+.bct-item div:nth-child(2) {
+    width: 130px;
+}
+
+.bct-item div:nth-child(3) {
+    width: 70px;
+    text-align: right;
+}
+
+.bct-item div:nth-child(4) {
+    text-align: right;
+    width: 35px;
+}
+
+.dot {
+    height: 20px;
+    width: 20px;
+    background-color: var(--color);
+    border-radius: 15px;
+}
+
+.activity {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2rem;
+    /* max-width: calc(100% - 411px - 2rem); */
+}
+
+.a_top {
+    display: flex;
+    gap: 1rem;
+}
+
+.a_top button {
+    padding: .75rem 1rem;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    cursor: pointer;
+    outline: none;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.a_top button span {
+    color: #737791;
+    font-family: Poppins;
+    font-size: .95rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.a_top button.filter {
+    border-radius: 8px;
+    background: linear-gradient(270deg, #2EBC96 0%, #1A9096 100%);
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+}
+
+.a_top button.filter span {
+    color: white;
+}
+
+.filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    border-radius: 12px;
+    background: linear-gradient(273deg, #2EBC96 2.11%, #1A9096 121.12%);
+    padding: 1.5rem 3rem;
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    border-radius: 5.343px;
+    border: none;
+    background: #FFF;
+    box-shadow: 0px 0px 5.343px 0px rgba(0, 0, 0, 0.10);
+    outline: none;
+    top: .6rem;
+    right: .6rem;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.filters video {
+    object-fit: cover;
+    border-radius: 5.893px;
+    background: #FFFFFD;
+    width: 164.56px;
+    height: 170px;
+    flex-shrink: 0;
+}
+
+.filters>.left {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.inp_con {
+    min-width: 250px;
+    flex: 1;
+    gap: .5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.inp_con label {
+    color: #FFF;
+    font-size: .8rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: .2rem;
+}
+
+.inp_con select {
+    border-radius: 9.418px;
+    border: 0.856px solid #D9D9D9;
+    background: rgba(217, 217, 217, 0.10);
+    outline: none;
+    padding: 1rem;
+}
+
+.a_table_wrapper {
+    overflow-x: auto;
+    background: #FFF;
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.25);
+}
+
+.a_table {
+    min-width: 1100px;
+    display: flex;
+    flex-direction: column;
+    gap: .9rem;
+}
+
+.at_item {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 6.201px;
+    border-bottom: 1px solid rgba(238, 238, 238, 0.93);
+    background: #FFF;
+}
+
+.at_item div {
+    padding: 1rem;
 }
