--- a/src/app/screens/chat-flow/chat-flow.component.css
+++ b/src/app/screens/chat-flow/chat-flow.component.css
@@ -153,7 +153,8 @@
     padding: .75rem;
 }
 
-.card_bottom p,.card_bottom textarea {
+.card_bottom p,
+.card_bottom textarea {
     color: #737791;
     font-family: Poppins;
     font-size: .75rem;
@@ -496,12 +497,12 @@
     border-radius: .5rem;
 }
 
-.message-edit{
-min-width: 23rem;
-padding: 1rem 0rem;
+.message-edit {
+    min-width: 23rem;
+    padding: 1rem 0rem;
 }
 
-.message-edit-box{
+.message-edit-box {
     padding: 1rem;
     background-color: #fcfcfc;
     border-radius: 0.6rem;
@@ -536,7 +537,7 @@ padding: 1rem 0rem;
 }
 
 
-.edit-input{
+.edit-input {
     border: none;
     background-color: #ffffff;
     box-shadow: 0px 0px 9px 0px #f0f0f0;
@@ -545,7 +546,7 @@ padding: 1rem 0rem;
     padding: 10px;
 }
 
-.edit-textarea{
+.edit-textarea {
     border: none;
     background-color: #ffffff;
     box-shadow: 0px 0px 9px 0px #f0f0f0;
