--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,8 @@ body {
     border-radius: 10px;
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
+
+button:disabled {
+    opacity: .7;
+    cursor: not-allowed;
+}
