--- a/src/app/screens/home/home.component.css
+++ b/src/app/screens/home/home.component.css
@@ -57,6 +57,9 @@ h6 {
 
 .main {
   padding: 10px !important;
+  padding-top: 10px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .top {
@@ -163,7 +166,6 @@ h6 {
   flex-direction: column;
   max-height: 300px;
   overflow-y: auto;
-  box-shadow: 0px 2px 40px 0px rgba(112, 144, 176, 0.12);
 }
 
 .d_card {
@@ -511,6 +513,7 @@ h6 {
   border-radius: 12px;
   padding: 10px;
   position: relative;
+  top: -23px;
 }
 .close {
   position: absolute;
@@ -591,7 +594,7 @@ h6 {
   background: #fff;
   font-size: 13px;
   margin-bottom: 5px;
-gap:1rem;
+  gap: 1rem;
 }
 
 .at_item * {
@@ -706,14 +709,20 @@ gap:1rem;
   border-radius: 12px;
   background: linear-gradient(273deg, #2ebc96 2.11%, #1a9096 121.12%);
   position: relative;
+  top: -30px;
   margin-top: 10px;
 }
 
 .filter-inputs {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 10px;
   width: 100%;
+}
+
+.filter-inputs input,
+.filter-inputs select {
+  height: 40px;
 }
 
 .filter-inputs-line {
@@ -759,7 +768,6 @@ gap:1rem;
 .inp_con {
   min-width: 250px;
   flex: 1;
-  gap: 0.5rem;
   display: flex;
   flex-direction: column;
 }
@@ -857,7 +865,7 @@ gap:1rem;
 
 .banner-options {
   background-color: white;
-  height: 70px;
+  height: 35px;
   width: 150px;
   position: absolute;
   right: 12px;
@@ -874,6 +882,6 @@ gap:1rem;
   cursor: pointer;
 }
 
-.banner-options div:first-child {
+/* .banner-options div:first-child {
   border-bottom: 1px solid lightgray;
-}
+} */
