--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -2,44 +2,63 @@
   <div class="top" style="position: relative">
     <div class="reports" style="position: relative">
       <!-- <p>{{ percentChange }}%</p> -->
-      <app-reports [graphData]="barChartData" [totalMsg]="totalMsg" [totalSms]="totalSms"
-        [totalWhatsapp]="totalWhatsapp" [percentChange]="percentChange"></app-reports>
+      <app-reports
+        [graphData]="barChartData"
+        [totalMsg]="totalMsg"
+        [totalSms]="totalSms"
+        [totalWhatsapp]="totalWhatsapp"
+        [percentChange]="percentChange"
+      ></app-reports>
       <!-- <app-reports></app-reports> -->
     </div>
     <div class="bar-container">
       <div class="banner-bg" style="position: relative">
         <img src="../../../assets/banner-bg.png" />
-        <P>{{ lastMsgDate }} - {{ firstMsgDate }}
-          <img src="../../../assets/More.png" (click)="toggleOptions(0, $event)" />
+        <P
+          >{{ lastMsgDate }} - {{ firstMsgDate }}
+          <img
+            src="../../../assets/More.png"
+            (click)="toggleOptions(0, $event)"
+          />
         </P>
         <h4>Messages Average</h4>
       </div>
-      <div class="banner-options" *ngIf="showOptions[0]" style="top: 50px; right: 30px">
+      <div
+        class="banner-options"
+        *ngIf="showOptions[0]"
+        style="position: absolute; top: 60px; right: 30px"
+      >
         <div>
-          <a style="text-decoration: none; color: black" href="/messages">View Page</a>
+          <a style="text-decoration: none; color: black" href="/messages"
+            >View Page</a
+          >
         </div>
-        <div>Download Reports</div>
+        <!-- <div style="color: black">Download Reports</div> -->
       </div>
       <div class="labels">
         <div style="display: flex; gap: 10px">
-          <div style="
+          <div
+            style="
               height: 45px;
               width: 4px;
               background: #2ebc96;
               border-radius: 2px;
-            "></div>
+            "
+          ></div>
           <div>
             <h6 style="color: #a3aed0; font-size: 10px">WhatsApp</h6>
             <p style="font-size: 18px">{{ totalWhatsapp }}</p>
           </div>
         </div>
         <div style="display: flex; gap: 10px">
-          <div style="
+          <div
+            style="
               height: 45px;
               width: 4px;
               background: #3981f7;
               border-radius: 2px;
-            "></div>
+            "
+          ></div>
           <div>
             <h6 style="color: #a3aed0; font-size: 10px">SMS</h6>
             <p style="font-size: 18px">{{ totalSms }}</p>
@@ -49,7 +68,10 @@
       <div class="chart" style="position: relative">
         <!-- <app-doughnut-chart [colors]="['#FF515C','#2EBC96', '#3B82F6']"
                     [data]="[55, 30, 15]"></app-doughnut-chart> -->
-        <app-pie-chart [colors]="['#2EBC96', '#3981F7']" [data]="pieData"></app-pie-chart>
+        <app-pie-chart
+          [colors]="['#2EBC96', '#3981F7']"
+          [data]="pieData"
+        ></app-pie-chart>
         <div style="text-align: center; position: absolute; bottom: 0">
           <h6 style="color: #a3aed0; font-size: 10px">Total Sents</h6>
           <p style="font-size: 18px; font-weight: 600">{{ totalMsg }}</p>
@@ -91,7 +113,11 @@
         <!-- <button> -->
         <h1>All Messages</h1>
         <!-- </button> -->
-        <button class="filter" [ngClass]="{ active: showFilters }" (click)="showFilters = true">
+        <button
+          class="filter"
+          [ngClass]="{ active: showFilters }"
+          (click)="showFilters = true"
+        >
           <img src="../../../assets/filter-icon-black.png" />
           <img src="../../../assets/filter-icon.png" />
           <span>Filters</span>
@@ -99,9 +125,20 @@
       </div>
       <div *ngIf="showFilters" class="filters">
         <button (click)="showFilters = false" class="close">
-          <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13" fill="black">
-            <path d="M12.0278 11.6573L0.808298 1.34253M12.0278 1.34253L0.808298 11.6573" stroke="#2EBC96"
-              stroke-width="1.60279" stroke-linecap="round" stroke-linejoin="round" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="13"
+            height="13"
+            viewBox="0 0 13 13"
+            fill="black"
+          >
+            <path
+              d="M12.0278 11.6573L0.808298 1.34253M12.0278 1.34253L0.808298 11.6573"
+              stroke="#2EBC96"
+              stroke-width="1.60279"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
           </svg>
         </button>
         <div class="left">
@@ -120,8 +157,16 @@
                   placeholder="Enter target"
                   
                 /> -->
-                <input class="form-control" [(ngModel)]="target" placeholder="+44 123456789" type="text"
-                  pattern="[0-9]*" inputmode="numeric" maxlength="12" (keypress)="onlyNumber($event)" />
+                <input
+                  class="form-control"
+                  [(ngModel)]="target"
+                  placeholder="+44 123456789"
+                  type="text"
+                  pattern="[0-9]*"
+                  inputmode="numeric"
+                  maxlength="12"
+                  (keypress)="onlyNumber($event)"
+                />
               </div>
               <div class="inp_con">
                 <label for="">Target Type</label>
@@ -163,11 +208,21 @@
               </div>
               <div class="inp_con">
                 <label for="">From</label>
-                <input style="text-transform: uppercase" type="date" [(ngModel)]="f_date" [max]="'3000-12-31'" />
+                <input
+                  style="text-transform: uppercase"
+                  type="date"
+                  [(ngModel)]="f_date"
+                  [max]="'3000-12-31'"
+                />
               </div>
               <div class="inp_con">
                 <label for="">To</label>
-                <input style="text-transform: uppercase" type="date" [(ngModel)]="t_date" [max]="'3000-12-31'" />
+                <input
+                  style="text-transform: uppercase"
+                  type="date"
+                  [(ngModel)]="t_date"
+                  [max]="'3000-12-31'"
+                />
               </div>
             </div>
 
@@ -191,20 +246,27 @@
             <div style="width: 250px">Messages</div>
           </div>
           <div>
-            <div *ngIf="messageList.length == 0" style="
+            <div
+              *ngIf="messageList.length == 0"
+              style="
                 font-size: 12px;
                 padding: 10px;
                 width: 100%;
                 text-align: center;
-              ">
+              "
+            >
               No data found.
             </div>
             <div class="at_item" *ngFor="let item of messageList">
               <div>{{ item.createdAt | date : "dd/MM/y, h:mma" }}</div>
-              <div [ngStyle]="{
+              <div
+                [ngStyle]="{
                   color: item.target_type === 'whatsapp' ? '#2EBC96' : '#3981F7'
-                }">
-                <ng-container *ngIf="item.target_type === 'whatsapp'; else smsText">
+                }"
+              >
+                <ng-container
+                  *ngIf="item.target_type === 'whatsapp'; else smsText"
+                >
                   WhatsApp
                 </ng-container>
                 <ng-template #smsText>SMS</ng-template>
@@ -212,22 +274,28 @@
               <div>+{{ item.to_number }}</div>
               <div style="text-transform: capitalize">{{ item.msg_type }}</div>
               <div>
-                <span style="color: #3981f7" *ngIf="item.sent_by === 0">SMS</span>
+                <span style="color: #3981f7" *ngIf="item.sent_by === 0"
+                  >SMS</span
+                >
                 <span style="color: #2ebc96" *ngIf="item.sent_by === 1">
                   WhatsApp
                 </span>
                 <span *ngIf="item.sent_by === 2">None</span>
               </div>
               <div>
-                <p [ngClass]="item.status === 'sent' ? 's_dot_r' : 's_dot_g'"></p>
+                <p
+                  [ngClass]="item.status === 'sent' ? 's_dot_r' : 's_dot_g'"
+                ></p>
                 {{ item.status }}
               </div>
-              <div style="
+              <div
+                style="
                   overflow: hidden;
                   text-overflow: ellipsis;
                   white-space: nowrap;
                   width: 250px;
-                ">
+                "
+              >
                 {{ item.message_text }}
               </div>
             </div>
@@ -236,30 +304,44 @@
       </div>
     </div>
     <div class="devices">
-      <div class="d_header">
+      <div class="d_header" style="position: relative">
         <div class="banner-bg">
           <img src="../../../assets/banner-bg.png" />
           <p>
             Total Devices
-            <img src="../../../assets/More.png" (click)="toggleOptions(1, $event)" />
+            <img
+              src="../../../assets/More.png"
+              (click)="toggleOptions(1, $event)"
+            />
           </p>
           <h4>Devices</h4>
         </div>
-        <div class="banner-options" *ngIf="showOptions[1]" style="top: 40px">
+        <div
+          class="banner-options"
+          *ngIf="showOptions[1]"
+          style="position: absolute; top: 40px"
+        >
           <div>
-            <a style="
+            <a
+              style="
                 text-decoration: none;
                 color: black;
                 background: transparent;
                 font-weight: normal;
-                font-family: sans-serif;
-              " href="/devices">View Page</a>
+                font-family: 'DM Sans';
+                font-size: 12px;
+              "
+              href="/devices"
+              >View Page</a
+            >
           </div>
-          <div>More Options</div>
+          <!-- <div style="color: black">More Options</div> -->
         </div>
       </div>
       <div class="d_body">
-        <span style="font-size: 12px; color: #a3aed0; padding: 10px">Recent</span>
+        <span style="font-size: 12px; color: #a3aed0; padding: 10px"
+          >Recent</span
+        >
         <div class="d_card" *ngFor="let device of deviceList">
           <div style="display: flex; align-items: center; gap: 10px">
             <div class="icon">
