--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -15,7 +15,6 @@
   gap: 1rem;
   margin: 10px 0;
   padding: 1.6rem;
-  border-bottom: 1px solid #e0e0e0;
   background: var(--surface-default-white, #fff);
 }
 
@@ -182,6 +181,7 @@
   font-size: 1.1rem;
   font-style: normal;
   width: 100%;
+  height: 80px;
   resize: none;
   font-weight: 600;
   line-height: normal;
@@ -313,4 +313,26 @@
 .imp-banner p {
   color: #737791;
   text-align: center;
+}
+
+.emoji-tab {
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  border: none;
+  font-family: "DM Sans";
+  display: flex;
+  padding: 10px;
+}
+
+.emoji-tab div {
+  border-left: 2px solid rgba(255, 255, 255, 0.4);
+  border-right: 2px solid rgba(255, 255, 255, 0.4);
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.emoji-tab.active-tab {
+  background-color: black !important;
+  color: white !important;
+  border-radius: 5px;
 }
